--- a/.gitignore
+++ b/.gitignore
@@ -182,3 +182,4 @@ Thumbs.db
 ## You should delete or comment out the next line if you have configuration in a different resource-config.json .
 **/resource-config.json
 replay_pid*
+/FontBatchGenerator/target/
